--- a/views/teamcontact.html
+++ b/views/teamcontact.html
@@ -1,12 +1,13 @@
-
-<div class="container-fluid classemanage">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
       <ol class="breadcrumb">
         <li><i class="fa fa-home"></i></li>
-        <li><a>类别管理</a></li>
-        <li class="active">项目管理</li>
+        <li>关于团队</li>
+        <li class="active">联系方式</li>
       </ol>
     </div>
+  </div>
+  <div class="main-content">
   </div>
 </div>
